[FIX] #45 : CORS 에러 해결을 위한 Config 파일 수정